# -*- org -*-

* 0.18 (Q1 2026) (oed v1, dynamic caps)

** utilities
- oed: improve enough so can run mkenam.sh ed script
  and also new -r restricted mode

** internals
- add dynamic capabilities checks infra (useful for oed -r)

* -----------------------------------------------------------

* 0.17 (Q4 2025) (ELF Linux, oia v0, ova/ovl v0, o5c/ovc/oic v0, oar/onm v0, Dockerfile.light v1, CLI.ml and caps, semgrep GHA, libcore v0, ocat/opwd/owc/oed/... utilities, resume windows and kernel)

** general
- renamed all binaries with an 'o' prefix (for ocaml): 
  omk, orc (haha), ogit, o5a, o5l, oil (haha), oar, onm, etc.

** toolchain
- support for ELF and Linux code generation in o5l and got hello_linux_arm.exe
  working! (and also the simpler exit_linux_arm.exe)
- start of multi-arch assembler/linker/compiler detecting arch with argv0
- port va (plan9 mips assembler) to OCaml (now called ova)
- partial port of vl (plan9 mips linker) to OCaml (now called ovl)
  enough for hello_linux_mips.exe to work! (and also exit_linux_mips.exe).
- port ar to OCaml (v0) (now called oar) using simpler archive format
- port nm to OCaml (v0) (now called onm)
- port of the -p and -p_count (was called -p -1 in kencc) basic profiling
  instrumentation in o5l/ovl/... (the code is now mostly generic)
- introduce new virtual instrs: Add, Load, Store, and Call so that certain
  code such as profiling instrumentation can be made generic and work
  across multiple archs
- resume work on o5c: support basic calls and cleanup code
- generalize Codegen5.ml in o5c so it can be used also
  for ovc/oic v0 with new Cmp, Jmp, JmpAndLink virtual instructions
  in Ast_asm.ml and new arch-specific methods in Arch5.ml, Archv.ml, and
  Archi.ml with interface in Arch_compiler.ml

** libcore
- compile our own stdlib (mostly a copy from ocaml-light stdlib)
  thanks to -nostdlib (and -nopervasives) with refined orga
  lib_core/{base,core,collections,printing,regexps,parsing}