@@ -24,6 +24,7 @@ SRC=\
  Cmd.ml Proc.ml \
  Date.ml Bits.ml Rune.ml \
  Exception.ml Exit.ml \
+ Arg_.ml \
  Endian.ml Arch.ml OS.ml \
 
 <$TOP/mkconfig
